# Impurity-Model

./: .gitignore  For-Alex.ipynb  Impurities_measurements.ipynb  Impurities_models.ipynb  Library.py  Modelling.ipynb  Outgassing.py  README.md  RunModel.py  RunModel2.py  elec_neg_functions.py  library.json  outgassing_rate.tex  outgassing_rate_acrylic.tex  outgassing_rate_epoxy.tex  outgassing_rate_new.tex  outgassing_rate_teflon.tex  requirements.txt
toucan/: README.md  pyproject.toml
toucan/src/toucan/: __init__.py  constants.py  core.py  utils.py
toucan/tests/: test_core.py
